swagger refactoring
